KAN-66 feat:channelInterceptor 및 websocket 핸들러 구현